// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PartyRequestFormModal
    onCloseClick={[Function]}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
        <div
                className="wh100 m-auto flex flex-column mb3 justify-center"
        >
                <div>
                        <h2
                                className="block-headline m3 pt3 mb3"
                        >
                                More Info
                        </h2>
                </div>
                <div>
                        <Button
                                className="right"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary"
                        />
                </div>
        </div>
</div>,
      "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 m-auto flex flex-column mb3 justify-center"
>
          <div>
                    <h2
                              className="block-headline m3 pt3 mb3"
                    >
                              More Info
                    </h2>
          </div>
          <div>
                    <Button
                              className="right"
                              color="madison-blue"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="Close"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="primary"
                    />
          </div>
</div>,
        "className": "relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <h2
                            className="block-headline m3 pt3 mb3"
              >
                            More Info
              </h2>
</div>,
            <div>
              <Button
                            className="right"
                            color="madison-blue"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="Close"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="primary"
              />
</div>,
          ],
          "className": "wh100 m-auto flex flex-column mb3 justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline m3 pt3 mb3"
>
                  More Info
</h2>,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "More Info",
                  "className": "block-headline m3 pt3 mb3",
                },
                "ref": null,
                "rendered": "More Info",
                "type": "h2",
              },
              undefined,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                className="right"
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="Close"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="primary"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "right",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "Close",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
          <div
                    className="wh100 m-auto flex flex-column mb3 justify-center"
          >
                    <div>
                              <h2
                                        className="block-headline m3 pt3 mb3"
                              >
                                        More Info
                              </h2>
                    </div>
                    <div>
                              <Button
                                        className="right"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Close"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary"
                              />
                    </div>
          </div>
</div>,
        "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="wh100 m-auto flex flex-column mb3 justify-center"
>
            <div>
                        <h2
                                    className="block-headline m3 pt3 mb3"
                        >
                                    More Info
                        </h2>
            </div>
            <div>
                        <Button
                                    className="right"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Close"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary"
                        />
            </div>
</div>,
          "className": "relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <h2
                                className="block-headline m3 pt3 mb3"
                >
                                More Info
                </h2>
</div>,
              <div>
                <Button
                                className="right"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary"
                />
</div>,
            ],
            "className": "wh100 m-auto flex flex-column mb3 justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline m3 pt3 mb3"
>
                    More Info
</h2>,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "More Info",
                    "className": "block-headline m3 pt3 mb3",
                  },
                  "ref": null,
                  "rendered": "More Info",
                  "type": "h2",
                },
                undefined,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="right"
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="Close"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="primary"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "right",
                  "color": "madison-blue",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "Close",
                  "onClick": [Function],
                  "onMouseEnter": [Function],
                  "onMouseLeave": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <PartyRequestFormModal />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <div
        className="relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
        <div
                className="wh100 m-auto flex flex-column mb3 justify-center"
        >
                <div>
                        <h2
                                className="block-headline m3 pt3 mb3"
                        >
                                More Info
                        </h2>
                </div>
                <div>
                        <Button
                                className="right"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary"
                        />
                </div>
        </div>
</div>,
      "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="wh100 m-auto flex flex-column mb3 justify-center"
>
          <div>
                    <h2
                              className="block-headline m3 pt3 mb3"
                    >
                              More Info
                    </h2>
          </div>
          <div>
                    <Button
                              className="right"
                              color="madison-blue"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label="Close"
                              onClick={[Function]}
                              onMouseEnter={[Function]}
                              onMouseLeave={[Function]}
                              shadow={false}
                              to=""
                              type="button"
                              variant="primary"
                    />
          </div>
</div>,
        "className": "relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div>
              <h2
                            className="block-headline m3 pt3 mb3"
              >
                            More Info
              </h2>
</div>,
            <div>
              <Button
                            className="right"
                            color="madison-blue"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label="Close"
                            onClick={[Function]}
                            onMouseEnter={[Function]}
                            onMouseLeave={[Function]}
                            shadow={false}
                            to=""
                            type="button"
                            variant="primary"
              />
</div>,
          ],
          "className": "wh100 m-auto flex flex-column mb3 justify-center",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h2
                  className="block-headline m3 pt3 mb3"
>
                  More Info
</h2>,
                undefined,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "More Info",
                  "className": "block-headline m3 pt3 mb3",
                },
                "ref": null,
                "rendered": "More Info",
                "type": "h2",
              },
              undefined,
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <Button
                className="right"
                color="madison-blue"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label="Close"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onMouseLeave={[Function]}
                shadow={false}
                to=""
                type="button"
                variant="primary"
/>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": null,
                "className": "right",
                "color": "madison-blue",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "Close",
                "onClick": [Function],
                "onMouseEnter": [Function],
                "onMouseLeave": [Function],
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "primary",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            "type": "div",
          },
        ],
        "type": "div",
      },
      "type": "div",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <div
          className="relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long"
>
          <div
                    className="wh100 m-auto flex flex-column mb3 justify-center"
          >
                    <div>
                              <h2
                                        className="block-headline m3 pt3 mb3"
                              >
                                        More Info
                              </h2>
                    </div>
                    <div>
                              <Button
                                        className="right"
                                        color="madison-blue"
                                        disabled={false}
                                        fullWidth={false}
                                        hover="shadow"
                                        label="Close"
                                        onClick={[Function]}
                                        onMouseEnter={[Function]}
                                        onMouseLeave={[Function]}
                                        shadow={false}
                                        to=""
                                        type="button"
                                        variant="primary"
                              />
                    </div>
          </div>
</div>,
        "className": "overflow-scroll fixed-cover bg-white-wash flex justify-center items-center transition-fade-in",
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="wh100 m-auto flex flex-column mb3 justify-center"
>
            <div>
                        <h2
                                    className="block-headline m3 pt3 mb3"
                        >
                                    More Info
                        </h2>
            </div>
            <div>
                        <Button
                                    className="right"
                                    color="madison-blue"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label="Close"
                                    onClick={[Function]}
                                    onMouseEnter={[Function]}
                                    onMouseLeave={[Function]}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="primary"
                        />
            </div>
</div>,
          "className": "relative flex items-center justify-center bg-white drop-shadow transition-slide-up-large-long",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div>
                <h2
                                className="block-headline m3 pt3 mb3"
                >
                                More Info
                </h2>
</div>,
              <div>
                <Button
                                className="right"
                                color="madison-blue"
                                disabled={false}
                                fullWidth={false}
                                hover="shadow"
                                label="Close"
                                onClick={[Function]}
                                onMouseEnter={[Function]}
                                onMouseLeave={[Function]}
                                shadow={false}
                                to=""
                                type="button"
                                variant="primary"
                />
</div>,
            ],
            "className": "wh100 m-auto flex flex-column mb3 justify-center",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="block-headline m3 pt3 mb3"
>
                    More Info
</h2>,
                  undefined,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "More Info",
                    "className": "block-headline m3 pt3 mb3",
                  },
                  "ref": null,
                  "rendered": "More Info",
                  "type": "h2",
                },
                undefined,
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <Button
                  className="right"
                  color="madison-blue"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label="Close"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                  shadow={false}
                  to=""
                  type="button"
                  variant="primary"
/>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": null,
                  "className": "right",
                  "color": "madison-blue",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "Close",
                  "onClick": [Function],
                  "onMouseEnter": [Function],
                  "onMouseLeave": [Function],
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "primary",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
